# team-standup-tracker

./: README.md
backend/: README.md  pyproject.toml
backend/app/: config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  standups.py
backend/tests/: conftest.py  test_auth.py  test_standups_manager.py  test_standups_member.py
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/manager/standups/: page.tsx
frontend/app/standups/history/: page.tsx
frontend/components/: AuthProvider.tsx  Layout.tsx  ManagerDashboard.tsx  MemberDashboard.tsx  ProtectedRoute.tsx
frontend/lib/: api.ts  auth.ts
frontend/pages/: _app.tsx  login.tsx
frontend/pages/manager/: dashboard.tsx
frontend/pages/standup/: history.tsx  today.tsx
frontend/styles/: globals.css
